--- a/views/components/sidebar.hbs
+++ b/views/components/sidebar.hbs
@@ -1,7 +1,5 @@
-<div class="max-w-2xl ml-0 mx-auto hidden lg:block">
-
 	<aside class="w-64" aria-label="Sidebar">
-		<div class="px-3 py-2 overflow-y-auto rounded bg-gray-50 dark:bg-gray-800">
+		<div class="h-full overflow-y-auto px-3 py-2 bg-gray-50 dark:bg-gray-800">
 			<ul class="space-y-2">
 				<li>
 					<a href="#"
@@ -129,4 +127,3 @@
 	</aside>
 
 	<script src="https://unpkg.com/flowbite@1.3.4/dist/flowbite.js"></script>
-</div>
