--- a/views/components/imbox.hbs
+++ b/views/components/imbox.hbs
@@ -223,7 +223,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="flex flex-row items-center h-16 rounded-xl bg-white w-full px-4">
+                            <div class="flex flex-row items-center h-28 rounded-xl bg-white w-full px-4 pb-6">
                                 <div>
                                     <button class="flex items-center justify-center text-gray-400 hover:text-gray-600">
                                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
@@ -272,7 +272,7 @@
         </div>
     </div>
 </main>
-{{> footer}}
+{{footer}}
 
 
 
