--- a/views/components/sidebar.hbs
+++ b/views/components/sidebar.hbs
@@ -3,7 +3,7 @@
 		<div class="h-screen overflow-y-auto px-3 py-2 bg-gray-50 dark:bg-gray-800">
 			<ul class="space-y-2">
 				<li>
-					<a href="#"
+					<a href="/home"
 						class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700">
 						<svg class="w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
 							fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
