--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,6 +8,13 @@
     <title>{{page}}</title>
 </head>
 <body>
-    {{{body}}}
+    {{> header}}
+    <div class="relative min-h-screen flex">
+        {{>sidebar}}
+        <div class="flex flex-col flex-1">
+            {{{body}}}
+        </div>
+    </div>
+    {{> footer}}
 </body>
 </html>
