--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,5 +1,5 @@
 <div class="bg-gray-800 min-h-screen">
-  <form action="" method="post">
+  <form action="/login" method="post">
     <div class="py-10">
         <div class="flex bg-white rounded-xl shadow-lg overflow-hidden mx-auto max-w-sm lg:max-w-4xl">
           <div class="hidden lg:block lg:w-1/2 bg-cover left-0"
@@ -7,7 +7,7 @@
           </div>
           <div class="w-full p-8 lg:w-1/2">
             <p class="text-xl text-gray-600 text-center">Bienvenid@</p>
-            <a href="/login" class="flex items-center justify-center mt-4 text-white rounded-lg shadow-md hover:bg-gray-100">
+            <a href="#" class="flex items-center justify-center mt-4 text-white rounded-lg shadow-md hover:bg-gray-100">
               <div class="px-4 py-3">
                 <svg class="h-6 w-6" viewBox="0 0 40 40">
                   <path
@@ -32,7 +32,7 @@
               <label class="block text-gray-700 text-sm font-bold mb-2">Correo electrónico</label>
               <input
                 class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-1 px-4 block w-full appearance-none"
-                type="email" required>
+                type="email" name="email" value="{{user.email}}" required>
             </div>
             <div class="mt-4">
               <div class="flex justify-between">
@@ -41,7 +41,7 @@
               </div>
               <input
                 class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-1 px-4 block w-full appearance-none"
-                type="password" required>
+                type="password" name="password" value="{{user.password}}"required>
             </div>
             <div class="mt-8">
               <button class="bg-blue-500 text-white font-bold py-2 px-4 w-full rounded hover:bg-blue-600">Iniciar
