--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -7,6 +7,9 @@
           </div>
           <div class="w-full p-8 lg:w-1/2">
             <p class="text-xl text-gray-600 text-center">Bienvenid@</p>
+            {{#each validation.errors}}
+                <p class="bg-red-200">{{this}}</p>
+            {{/each}}
             <a href="#" class="flex items-center justify-center mt-4 text-white rounded-lg shadow-md hover:bg-gray-100">
               <div class="px-4 py-3">
                 <svg class="h-6 w-6" viewBox="0 0 40 40">
