--- a/views/components/header.hbs
+++ b/views/components/header.hbs
@@ -38,6 +38,7 @@
         </div>
       </div>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 ml-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+        <h1 class="text-slate-50">Bienvenido {{session.username}}</h1>
         <button type="button" class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
           <span class="sr-only">View notifications</span>
           <!-- Heroicon name: outline/bell -->
@@ -45,8 +46,6 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
           </svg>
         </button>
-        
-          <h1>Bienvenido {{session.username}}</h1>
         
         <!-- Profile dropdown -->
         <div class="ml-3 relative">
