--- a/views/components/content.hbs
+++ b/views/components/content.hbs
@@ -1,60 +1,6 @@
       <!-- This example requires Tailwind CSS v2.0+ -->
       <div class="overflow-y-auto h-3/5 flex flex-1 flex-col mx-2 my-0 mt-4 relative">
         <div class="my-2 overflow-y-scroll overflow-x-hidden sm:mx-4 lg:mx-0">
-          <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-2">
-            <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-              {{#if hasUsers }}
-              <table class="min-w-full divide-y divide-gray-200 table-auto">
-                <thead class="bg-gray-50">
-                  <tr>
-                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
-                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Gender</th>
-                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
-                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Role</th>
-                    <th scope="col" class="relative px-6 py-3">
-                      <span class="sr-only">Edit</span>
-                    </th>
-                  </tr>
-                </thead>
-                <tbody class="bg-white divide-y divide-gray-200">
-                  {{#each users}}
-                  <tr>
-                    <td class="px-6 py-4 whitespace-nowrap">
-                      <div class="flex items-center">
-                        <div class="flex-shrink-0 h-10 w-10">
-                            <img class="h-10 w-10 rounded-full" src="{{this.profilpic}}" alt="">
-                        </div>
-                        <div class="ml-4">
-                          <div class="text-sm font-medium text-gray-900">{{this.name}}</div>
-                          <div class="text-sm text-gray-500">{{this.email}}</div>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap">
-                      <div class="text-sm text-gray-900">
-                        {{#if gender }}
-                          Hombre
-                        {{else}}
-                          Mujer
-                        {{/if}}
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap">
-                      <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800"> Active </span>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">Admin</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                      <a href="#" class="text-indigo-600 hover:text-indigo-900">Edit</a>
-                    </td>
-                  </tr>
-                  {{/each}}
-                  <!-- More people... -->
-                </tbody>
-              </table>
-            </div>
-          </div>
-          {{else}}
-            <p class="text-red-500">Ningun usuario registrado</p>
-          {{/if}}
+{{!-- aqui va el contenido del post --}}
         </div>
       </div>
